--- a/style.css
+++ b/style.css
@@ -27,3 +27,27 @@ form {
     background-color: darkgray;
     color: red;
 }
+
+a:link {
+    color: black;
+    background-color: transparent;
+    text-decoration: none;
+  }
+  
+  a:visited {
+    color: darkgray;
+    background-color: transparent;
+    text-decoration: none;
+  }
+  
+  a:hover {
+    color: blue;
+    background-color: transparent;
+    text-decoration: none;
+  }
+  
+  a:active {
+    color: cyan;
+    background-color: transparent;
+    text-decoration: none;
+  }
